[package]
name = "api_empleados"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
sqlx = { version = "0.6", features = ["mysql", "runtime-async-std-native-tls","time"] }
async-std = "1.10"
dotenv = "0.15.0"
time = "0.3.36"
serde = { version = "1.0", features = ["derive"] }
env_logger = "0.10.0"
log = "0.4.22"